2005-09-22  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/event/filters/StepFilter.java (StepFilter): Do not test
	for null thread ID -- just test if it has not been garbage collected.
	* gnu/classpath/jdwp/event/filters/ThreadOnlyFilter.java (ThreadOnlyFilter):
	Likewise.

2005-09-22  Lillian Angel  <langel@redhat.com>

	* javax/swing/JPopupMenu.java
	(setVisible): Size of menu should always be the preferred
	size. It was sometimes cutting of the accelerator.
	* javax/swing/plaf/basic/BasicMenuItemUI.java:
	Increased defaultAcceleratorLabelGap field to 10, to
	make menuItem more readable.

2005-09-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/Utilities.java:
	(getPreviousWord): Fixed incorrect logic.  Use preceding() instead of 
	following(), previous() instead of next().

2005-09-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/java/text/BaseBreakIterator.java:
	(following): Don't restore old CharacterIterator index.

2005-09-22  Tom Tromey  <tromey@redhat.com>

	* javax/swing/JList.java (AccessibleJList): New constructor.

2005-09-22  Tom Tromey  <tromey@redhat.com>

	* java/net/ServerSocket.java (accept): Use correct security manager
	call.

2005-09-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/Utilities.java:
	(getNextWord): Implemented.
	(getPreviousWord): Implemented.

2005-09-22  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/MetalLookAndFeel.java
	(initComponentDefaults): Changed back to original 
	values.

2005-09-22  Lillian Angel  <langel@redhat.com>
	* javax/swing/ToolTipManager.java
	(showTip): Moved tooltip location adjustments to a
	helper method.
	(adjustLocation): New helper method.
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Fixed defaults for Table, 
	TableHeader, Tree to match JDK.
	* javax/swing/plaf/MetalLookAndFeel.java
	(initComponentDefaults): Fixed defaults for Table and
	TableHeader to match JDK.	
	* javax/swing/plaf/basic/BasicToolTipUI.java