@@ -1,3 +1,9 @@
+2005-09-22  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* javax/swing/text/Utilities.java:
+	(getWordEnd): Implemented.
+	(getWordStart): Implemented.
+
 2005-09-22  Keith Seitz  <keiths@redhat.com>
 
 	* gnu/classpath/jdwp/event/filters/StepFilter.java (StepFilter): Do not test
